--- a/vignettes/crisprseekplus.Rmd
+++ b/vignettes/crisprseekplus.Rmd
@@ -1,33 +1,16 @@
 ---
-title: "crisprseekplus"
-author: "Sophie Wigmore / Alper Kucukural"
+title: "crisprseekplus user guide"
+author: "Alper Kucukural, Sophie Wigmore "
 date: "July 26, 2016"
-output: html_document
+output: BiocStyle::html_document
+vignette: >
+    %\VignetteIndexEntry{DEBrowser Vignette}
+    %\VignetteEngine{knitr::rmarkdown}
+    %\VignetteEncoding{UTF-8}
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r, echo=FALSE, results="hide", warning=FALSE}
 ```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
 # CRISPRseekerPlus v1.0.0
 
